plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'com.github.tylerspaeth'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25) // Or your desired Java version
    }
}

application {
    mainClass = 'com.github.tylerspaeth.Main'
    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics', "--sun-misc-unsafe-memory-access=allow"]
}

javafx {
    version = '25'
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

repositories {
    mavenCentral()
}

dependencies {

    // Include all jars in libs folder
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    // Logging
    implementation 'ch.qos.logback:logback-classic:1.5.20'

    // Database connection
    implementation 'org.hibernate.orm:hibernate-core:7.1.8.Final'
    implementation 'com.mysql:mysql-connector-j:9.5.0'
    compileOnly "org.hibernate:hibernate-jpamodelgen:6.3.0.Final"
    annotationProcessor "org.hibernate:hibernate-jpamodelgen:6.3.0.Final"

    // Junit
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
    testRuntimeOnly  'org.junit.platform:junit-platform-launcher'

    // Mockito
    testImplementation 'org.mockito:mockito-core:5.10.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.10.0'
}

test {
    useJUnitPlatform()
    testLogging {
        showStandardStreams = true
    }
    jvmArgs += ["-Dnet.bytebuddy.experimental=true"]
}